--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "babel-core": "^6.0.20",
     "babel-loader": "^6.0.1",
+    "babel-plugin-transform-class-properties": "^6.23.0",
     "babel-plugin-transform-object-assign": "^6.0.14",
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.0.15",
@@ -18,6 +19,7 @@
     "expose-loader": "^0.7.0",
     "extract-text-webpack-plugin": "^0.9.1",
     "file-loader": "^0.8.5",
+    "filesize": "^3.5.4",
     "lodash.debounce": "^3.1.1",
     "moment": "^2.10.6",
     "node-sass": "^3.3.3",
