--- a/conf/application.conf
+++ b/conf/application.conf
@@ -51,8 +51,12 @@ play.modules.enabled += "modules.sponsorshiplifecycle.SponsorshipLifecycleModule
 # evolutionplugin=disabled
 
 akka {
+  loglevel = "INFO"
+  log-config-on-start = on
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
   actor {
     default-dispatcher {
+      executor: "fork-join-executor"
       fork-join-executor {
         # Hack to avoid deadlocks on servers with on one CPU
         parallelism-factor = 10.0
